# driink

./: README.md  pyproject.toml  setup.py
driink/: applet.py  cli.py  config.py  driink.ini  migrations.py  models.py  notifier.py  settings.py  settings.toml
driink/alembic/: env.py
