[tool.poetry]
name = "driink"
version = "0.1"
description = "A lightweight command-line tool to track daily water consumption and send reminders to stay hydrated"
authors = ["Guido Accardo <gaccardo@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notify2 = "^0.3.1"
dbus-python = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
