[tool.poetry]
name = "driink"
version = "0.1"
description = "A lightweight command-line tool to track daily water consumption and send reminders to stay hydrated"
authors = ["Guido Accardo <gaccardo@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notify2 = "^0.3.1"
dbus-python = "^1.3.2"
click = "^8.1.8"
twine = "^6.0.1"
build = "^1.2.2.post1"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
wheel = "^0.45.1"


[build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
